AST_harmony/MP/.antlr/MPParser.py
# Generated from c:\Users\Hydrogen\Downloads\BK-eL\HK201\AssQUIZ201\PPL\AST_harmony\MP\MP.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'<>'", "'='", "'<'", "'<='", 
                     "'>'", "'>='", "':='", "'['", "']'", "':'", "'('", 
                     "')'", "';'", "'..'", "','" ]

    symbolicNames = [ "<INVALID>", "WITH", "BREAK", "CONTINUE", "FOR", "TO", 
                      "DOWNTO", "DO", "IF", "THEN", "ELSE", "RETURN", "WHILE", 
                      "BEGIN", "END", "FUNCTION", "PROCEDURE", "VAR", "ARRAY", 
                      "OF", "REAL", "BOOLEAN", "INTEGER", "STRING", "NOR", 
                      "AND", "OR", "DIV", "MOD", "NOT", "WS", "BLOCK_COMMENT1", 
                      "BLOCK_COMMENT2", "LINE_COMMENT", "BOOLEANLITERAL", 
                      "IDENTIFIERS", "ADD_OP", "SUB_OP", "MUL_OP", "DIV_OP", 
                      "NE_OP", "E_OP", "L_OP", "LE_OP", "G_OP", "GE_OP", 
                      "ASSIGN_OP", "LEFTSQUAREBRACKET", "RIGHTSQUAREBRACKET", 
                      "COLON", "LEFTBRACKET", "RIGHTBRACKET", "SEMICOLON", 
                      "DOUBLEDOT", "COMMA", "INTEGERLITERAL", "REALLITERAL", 
                      "STRINGLITERAL", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_many_declarations = 1
    RULE_declarations = 2
    RULE_variable_declarations = 3
    RULE_list_var_declarations = 4
    RULE_var_declarations = 5
    RULE_mptype = 6
    RULE_primitive_type = 7
    RULE_array_type = 8
    RULE_lowerupper = 9
    RULE_function_declarations = 10
    RULE_param_list = 11
    RULE_procedure_declarations = 12
    RULE_expression = 13
    RULE_exp1 = 14
    RULE_exp2 = 15
    RULE_exp3 = 16
    RULE_exp4 = 17
    RULE_exp5 = 18
    RULE_exp6 = 19
    RULE_exp7 = 20
    RULE_exp8 = 21
    RULE_operands = 22
    RULE_index_expression = 23
    RULE_funccall = 24
    RULE_literal = 25
    RULE_statement = 26
    RULE_assignment_statement = 27
    RULE_iid = 28
    RULE_if_statement = 29
    RULE_while_statement = 30
    RULE_for_statement = 31
    RULE_break_statement = 32
    RULE_continue_statement = 33
    RULE_return_statement = 34
    RULE_compound_statement = 35
    RULE_with_statement = 36
    RULE_call_statement = 37

    ruleNames =  [ "program", "many_declarations", "declarations", "variable_declarations", 
                   "list_var_declarations", "var_declarations", "mptype", 
                   "primitive_type", "array_type", "lowerupper", "function_declarations", 
                   "param_list", "procedure_declarations", "expression", 
                   "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", 
                   "exp8", "operands", "index_expression", "funccall", "literal", 
                   "statement", "assignment_statement", "iid", "if_statement", 
                   "while_statement", "for_statement", "break_statement", 
                   "continue_statement", "return_statement", "compound_statement", 
                   "with_statement", "call_statement" ]

    EOF = Token.EOF
    WITH=1
    BREAK=2
    CONTINUE=3
    FOR=4
    TO=5
    DOWNTO=6
    DO=7
    IF=8
    THEN=9
    ELSE=10
    RETURN=11
    WHILE=12
    BEGIN=13
    END=14
    FUNCTION=15
    PROCEDURE=16
    VAR=17
    ARRAY=18
    OF=19
    REAL=20
    BOOLEAN=21
    INTEGER=22
    STRING=23
    NOR=24
    AND=25
    OR=26
    DIV=27
    MOD=28
    NOT=29
    WS=30
    BLOCK_COMMENT1=31
    BLOCK_COMMENT2=32
    LINE_COMMENT=33
    BOOLEANLITERAL=34
    IDENTIFIERS=35
    ADD_OP=36
    SUB_OP=37
    MUL_OP=38
    DIV_OP=39
    NE_OP=40
    E_OP=41
    L_OP=42
    LE_OP=43
    G_OP=44
    GE_OP=45
    ASSIGN_OP=46
    LEFTSQUAREBRACKET=47
    RIGHTSQUAREBRACKET=48
    COLON=49
    LEFTBRACKET=50
    RIGHTBRACKET=51
    SEMICOLON=52
    DOUBLEDOT=53
    COMMA=54
    INTEGERLITERAL=55
    REALLITERAL=56
    STRINGLITERAL=57
    ILLEGAL_ESCAPE=58
    UNCLOSE_STRING=59
    ERROR_CHAR=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def many_declarations(self):
            return self.getTypedRuleContext(MPParser.Many_declarationsContext,0)


        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def getRuleIndex(self):
            return MPParser.RULE_program




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.many_declarations()
            self.state = 77
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclarationsContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclarationsContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_many_declarations




    def many_declarations(self):

        localctx = MPParser.Many_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_many_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.declarations()
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declarations(self):
            return self.getTypedRuleContext(MPParser.Variable_declarationsContext,0)


        def function_declarations(self):
            return self.getTypedRuleContext(MPParser.Function_declarationsContext,0)


        def procedure_declarations(self):
            return self.getTypedRuleContext(MPParser.Procedure_declarationsContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_declarations




    def declarations(self):

        localctx = MPParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarations)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.variable_declarations()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.function_declarations()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.procedure_declarations()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def list_var_declarations(self):
            return self.getTypedRuleContext(MPParser.List_var_declarationsContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_variable_declarations




    def variable_declarations(self):

        localctx = MPParser.Variable_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable_declarations)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(MPParser.VAR)
            self.state = 90
            self.list_var_declarations()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_var_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declarations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Var_declarationsContext)
            else:
                return self.getTypedRuleContext(MPParser.Var_declarationsContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMICOLON)
            else:
                return self.getToken(MPParser.SEMICOLON, i)

        def getRuleIndex(self):
            return MPParser.RULE_list_var_declarations




    def list_var_declarations(self):

        localctx = MPParser.List_var_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_list_var_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self.var_declarations()
                self.state = 93
                self.match(MPParser.SEMICOLON)
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.IDENTIFIERS):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIERS(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDENTIFIERS)
            else:
                return self.getToken(MPParser.IDENTIFIERS, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def mptype(self):
            return self.getTypedRuleContext(MPParser.MptypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_var_declarations




    def var_declarations(self):

        localctx = MPParser.Var_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(MPParser.IDENTIFIERS)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 100
                self.match(MPParser.COMMA)
                self.state = 101
                self.match(MPParser.IDENTIFIERS)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(MPParser.COLON)
            self.state = 108
            self.mptype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MptypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MPParser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MPParser.Array_typeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_mptype




    def mptype(self):

        localctx = MPParser.MptypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mptype)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.primitive_type()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primitive_type




    def primitive_type(self):

        localctx = MPParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LEFTSQUAREBRACKET(self):
            return self.getToken(MPParser.LEFTSQUAREBRACKET, 0)

        def lowerupper(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.LowerupperContext)
            else:
                return self.getTypedRuleContext(MPParser.LowerupperContext,i)


        def DOUBLEDOT(self):
            return self.getToken(MPParser.DOUBLEDOT, 0)

        def RIGHTSQUAREBRACKET(self):
            return self.getToken(MPParser.RIGHTSQUAREBRACKET, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(MPParser.Primitive_typeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_array_type




    def array_type(self):

        localctx = MPParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(MPParser.ARRAY)
            self.state = 117
            self.match(MPParser.LEFTSQUAREBRACKET)
            self.state = 118
            self.lowerupper()
            self.state = 119
            self.match(MPParser.DOUBLEDOT)
            self.state = 120
            self.lowerupper()
            self.state = 121
            self.match(MPParser.RIGHTSQUAREBRACKET)
            self.state = 122
            self.match(MPParser.OF)
            self.state = 123
            self.primitive_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LowerupperContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGERLITERAL(self):
            return self.getToken(MPParser.INTEGERLITERAL, 0)

        def SUB_OP(self):
            return self.getToken(MPParser.SUB_OP, 0)

        def getRuleIndex(self):
            return MPParser.RULE_lowerupper




    def lowerupper(self):

        localctx = MPParser.LowerupperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_lowerupper)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUB_OP:
                self.state = 125
                self.match(MPParser.SUB_OP)


            self.state = 128
            self.match(MPParser.INTEGERLITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def IDENTIFIERS(self):
            return self.getToken(MPParser.IDENTIFIERS, 0)

        def LEFTBRACKET(self):
            return self.getToken(MPParser.LEFTBRACKET, 0)

        def RIGHTBRACKET(self):
            return self.getToken(MPParser.RIGHTBRACKET, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def mptype(self):
            return self.getTypedRuleContext(MPParser.MptypeContext,0)


        def SEMICOLON(self):
            return self.getToken(MPParser.SEMICOLON, 0)

        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def param_list(self):
            return self.getTypedRuleContext(MPParser.Param_listContext,0)


        def variable_declarations(self):
            return self.getTypedRuleContext(MPParser.Variable_declarationsContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_function_declarations




    def function_declarations(self):

        localctx = MPParser.Function_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_function_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(MPParser.FUNCTION)
            self.state = 131
            self.match(MPParser.IDENTIFIERS)
            self.state = 132
            self.match(MPParser.LEFTBRACKET)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENTIFIERS:
                self.state = 133
                self.param_list()


            self.state = 136
            self.match(MPParser.RIGHTBRACKET)
            self.state = 137
            self.match(MPParser.COLON)
            self.state = 138
            self.mptype()
            self.state = 139
            self.match(MPParser.SEMICOLON)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 140
                self.variable_declarations()


            self.state = 143
            self.compound_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declarations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Var_declarationsContext)
            else:
                return self.getTypedRuleContext(MPParser.Var_declarationsContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMICOLON)
            else:
                return self.getToken(MPParser.SEMICOLON, i)

        def getRuleIndex(self):
            return MPParser.RULE_param_list




    def param_list(self):

        localctx = MPParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.var_declarations()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.SEMICOLON:
                self.state = 146
                self.match(MPParser.SEMICOLON)
                self.state = 147
                self.var_declarations()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Procedure_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def IDENTIFIERS(self):
            return self.getToken(MPParser.IDENTIFIERS, 0)

        def LEFTBRACKET(self):
            return self.getToken(MPParser.LEFTBRACKET, 0)

        def RIGHTBRACKET(self):
            return self.getToken(MPParser.RIGHTBRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(MPParser.SEMICOLON, 0)

        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def param_list(self):
            return self.getTypedRuleContext(MPParser.Param_listContext,0)


        def variable_declarations(self):
            return self.getTypedRuleContext(MPParser.Variable_declarationsContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_procedure_declarations




    def procedure_declarations(self):

        localctx = MPParser.Procedure_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_procedure_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(MPParser.PROCEDURE)
            self.state = 154
            self.match(MPParser.IDENTIFIERS)
            self.state = 155
            self.match(MPParser.LEFTBRACKET)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENTIFIERS:
                self.state = 156
                self.param_list()


            self.state = 159
            self.match(MPParser.RIGHTBRACKET)
            self.state = 160
            self.match(MPParser.SEMICOLON)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 161
                self.variable_declarations()

